# devops-ultimate-hands-on-project-python

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  python-ci.yaml
src/simple_http_checker/: checker.py  cli.py
test/: test_checker.py  test_cli.py
